client.yaml
# To test, run: client grpc://xds:///echo.default.svc.cluster.local:7070
# Note: must use FQDN
# To compare load balancing:
# client grpc://echo:7070 --count 50 | grep -o 'Hostname.*' | sort | uniq -c
# client grpc://xds:///echo.default.svc.cluster.local:7070 --count 50 | grep -o 'Hostname.*' | sort | uniq -c
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-client
spec:
  selector:
    matchLabels:
      app: echo-client
  template:
    metadata:
      labels:
        app: echo-client
      annotations:
        inject.istio.io/templates: "grpc"
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      - name: echo
        # Same as upstream one, but import xds resolver
        image: gcr.io/howardjohn-istio/app:1608571957
        command: ["sleep", "100000000"]

---
apiVersion: v1
kind: Service
metadata:
  name: echo-client
spec:
  selector:
    app: echo-client
  ports:
  - name: grpc
    port: 7070
---
# manual config:
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: echo-client
#spec:
#  selector:
#    matchLabels:
#      app: echo-client
#  template:
#    metadata:
#      labels:
#        app: echo-client
#      annotations:
#        sidecar.istio.io/inject: "false"
#        grpc.io/proxyless-bootstrap: |
#          {"xds_servers":[{"server_uri":"dns:///istiod.istio-system.svc:15010","channel_creds":[{"type":"insecure"}]}],"server_features":["xds_v3"],"node":{"id":"sidecar~10.0.0.1~proxyless.default~default.svc.cluster.local","metadata":{"GENERATOR":"grpc"}}}
#    spec:
#      terminationGracePeriodSeconds: 0
#      containers:
#      - name: echo
#        # Same as upstream one, but import xds resolver
#        image: gcr.io/howardjohn-istio/app:1608571957
#        command: ["sleep", "100000000"]
#        env:
#        - name: GRPC_XDS_EXPERIMENTAL_V3_SUPPORT
#          value: "true"
#        - name: GRPC_XDS_BOOTSTRAP
#          value: /var/lib/grpc/data/bootstrap.json
#        volumeMounts:
#        - mountPath: /var/lib/grpc/data/bootstrap.json
#          subPath: bootstrap.json
#          name: grpc-bootstrap
#      volumes:
#      - name: grpc-bootstrap
#        downwardAPI:
#          items:
#          - path: bootstrap.json
#            fieldRef:
#              fieldPath: "metadata.annotations['grpc.io/proxyless-bootstrap']"
